--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
   "packageManager": "yarn@3.2.1",
   "engines": {
     "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "yarn": "^1.22.19"
   }
 }
