--- a/seed-walkers/package.json
+++ b/seed-walkers/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.2.4",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^5.7.2",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.12.8"
   }
 }
